--- a/index.html
+++ b/index.html
@@ -433,27 +433,27 @@
                             <div class="row">
                                 <div class="col-lg-8 mb-4">
                                     <div class="div-img" style="height: 415px;">
-                                        <img src="/img/1.png" alt="">
+                                        <img src="./img/1.png" alt="">
                                     </div>
                                 </div>
                                 <div class="col-lg-4 mb-4">
                                     <div class="div-img" style="height: 415px;">
-                                        <img src="/img/1.png" alt="">
+                                        <img src="./img/1.png" alt="">
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="div-img">
-                                        <img src="/img/1.png" alt="">
+                                        <img src="./img/1.png" alt="">
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="div-img">
-                                        <img src="/img/1.png" alt="">
+                                        <img src="./img/1.png" alt="">
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="div-img">
-                                        <img src="/img/1.png" alt="">
+                                        <img src="./img/1.png" alt="">
                                     </div>
                                 </div>
                             </div>
